<resources>
    <string name="app_name">Energy Manager</string>
    <string name="user_id">ID</string>
    <string name="user_pwd">Password</string>
    <string name="user_signin">Sign in</string>
    <string name="user_signup">Sign Up</string>
    <string name="user_copyright">Copyright</string>
    <string name="user_id_hint">아이디를 입력하세요</string>
    <string name="user_pwd_hint">비밀번호를 입력하세요</string>
    <string name="str_cancel">Cancel</string>
    <string name="user_phone_hint">전화번호를 입력하세요</string>
    <string name="user_phone">Phone</string>
    <string name="user_location">위치 정보 공유</string>
    <string name="str_agree">Agree</string>
    <string name="str_disagree">Disagree</string>
    <string name="user_noti">알림 허용</string>
    <string name="str_select">선택사항</string>
    <string name="user_type">계약종별</string>
    <string name="user_date">검침일</string>
    <string name="str_house_type">주거구분</string>
    <string name="str_house_yes">주거용</string>
    <string name="str_house_no">비주거용</string>
    <string name="user_pwd2">비밀번호 재입력</string>
    <string name="user_pwd2_hint">비밀번호를 재입력하세요</string>
    <string name="user_idcheck">중복확인</string>
    <string name="user_email">E-Mail</string>
    <string name="user_email_hint">이메일을 입력하세요</string>

    <!-- GCM Sender ID -->
    <string name="gcm_defaultSenderId">99975034382</string>


    <string name="user_name">Name</string>
    <string name="user_name_hint">write your name</string>
    <string name="user_forgot">Forgot</string>
    <string name="user_id_save">Save ID</string>
    <string name="user_id_auto_login">Auto Login</string>
    <string name="str_id_forgot">아이디찾기</string>
    <string name="str_pwd_forgot">비밀번호찾기</string>
    <string name="str_button_close">\'뒤로\'버튼을 한번 더 누르시면 종료됩니다</string>
    <string name="str_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to SettingsFragment -->

    <!-- Example General settings -->
    <string name="pref_header_privacy">Privacy</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_charge_plan">Charge Plan</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_charge">Charge</string>
    <string name="pref_header_leave">leave</string>
    <string name="pref_header_logout">Logout</string>
    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="str_home">Home</string>
    <string name="str_login">Login</string>
    <string name="str_register">Register</string>
    <string name="str_notification">My Notification</string>
    <string name="str_faq">FAQ</string>
    <string name="str_graph">Graph</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_cur_pwd">Current Password</string>
    <string name="str_read_date">검침일</string>
    <string name="str_usage">사용량 조회</string>
    <string name="str_pastusage">과거 사용량</string>
</resources>
