<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.imagelab.smartpowerman.SettingsActivity$PrivacyPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_privacy" />

    <header
        android:fragment="com.imagelab.smartpowerman.SettingsActivity$ChargePlanPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_charge_plan" />

    <header
        android:fragment="com.imagelab.smartpowerman.SettingsActivity$ChargePreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_charge" />

    <header
        android:fragment="com.imagelab.smartpowerman.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.imagelab.smartpowerman.SettingsActivity$LeavePreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_leave" />

    <header
        android:fragment="com.imagelab.smartpowerman.SettingsActivity$LogoutPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_logout" />
</preference-headers>

