<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.imagelab.smartpowerman.RegisterActivity"
    android:orientation="vertical">

    <TextView
        android:text="등록"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_height="match_parent"
            android:layout_width="100dp"
            android:gravity="center"
            android:text="@string/user_id" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/register_id"
            android:hint="@string/user_id_hint" />

        <Button
            android:text="@string/user_idcheck"
            android:layout_height="match_parent"
            android:id="@+id/btn_idcheck"
            android:layout_width="match_parent" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:text="@string/user_pwd"
            android:layout_height="match_parent"
            android:layout_width="100dp"
            android:gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/register_pwd"
            android:hint="@string/user_pwd_hint" />


    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:text="@string/user_pwd2"
            android:layout_height="match_parent"
            android:layout_width="100dp"
            android:gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/register_pwd2"
            android:hint="@string/user_pwd2_hint" />


    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:text="@string/user_phone"
            android:layout_height="match_parent"
            android:layout_width="100dp"
            android:gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/register_phone"
            android:hint="@string/user_phone_hint"
            android:inputType="phone" />


    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:text="@string/user_email"
            android:layout_height="match_parent"
            android:layout_width="100dp"
            android:gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/register_email"
            android:hint="@string/user_email_hint"
            android:inputType="textEmailAddress" />


    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:text="@string/user_location"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_width="175dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/rb_location">
            <RadioButton
                android:text="@string/str_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_location_agree"
                android:checked="true" />

            <RadioButton
                android:text="@string/str_disagree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_location_disagree" />
        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/user_noti"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_width="175dp" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/rb_noti">
            <RadioButton
                android:text="@string/str_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_noti_agree"
                android:checked="true" />

            <RadioButton
                android:text="@string/str_disagree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_noti_disagree" />
        </RadioGroup>



    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">

        <TextView
            android:text="@string/str_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_height="match_parent"
            android:layout_width="100dp"
            android:gravity="center"
            android:text="@string/user_type" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sp_type"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_height="match_parent"
            android:layout_width="100dp"
            android:gravity="center"
            android:text="@string/user_date" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sp_date"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_height="match_parent"
            android:layout_width="100dp"
            android:gravity="center"
            android:text="@string/str_house_type" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:text="@string/str_house_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton"
                android:layout_weight="1"
                android:keepScreenOn="false"
                android:checked="true" />

            <RadioButton
                android:text="@string/str_house_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton2"
                android:layout_weight="1" />
        </RadioGroup>



    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/str_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel"
            android:layout_weight="1" />

        <Button
            android:text="@string/user_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignUp"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>
