<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.imagelab.smartpowerman.Register2Activity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/user_noti"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_width="175dp" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/rb_noti">
            <RadioButton
                android:text="@string/str_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_noti_agree"
                android:checked="true" />

            <RadioButton
                android:text="@string/str_disagree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_noti_disagree" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">

        <TextView
            android:text="@string/str_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_height="match_parent"
            android:layout_width="100dp"
            android:gravity="center"
            android:text="@string/user_type" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sp_type"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_height="match_parent"
            android:layout_width="100dp"
            android:gravity="center"
            android:text="@string/user_date" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sp_date"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_height="match_parent"
            android:layout_width="100dp"
            android:gravity="center"
            android:text="@string/str_house_type" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:text="@string/str_house_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton"
                android:layout_weight="1"
                android:keepScreenOn="false"
                android:checked="true" />

            <RadioButton
                android:text="@string/str_house_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton2"
                android:layout_weight="1" />
        </RadioGroup>



    </LinearLayout>
</LinearLayout>
