<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.imagelab.smartpowerman.PreferenceActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_height="20dp"
            android:layout_width="100dp"
            android:text="@string/user_email" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_pri_email"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:inputType="textEmailAddress" />

            <Button
                android:text="@string/user_idcheck"
                android:layout_height="match_parent"
                android:id="@+id/btn_pri_email_check"
                android:layout_width="wrap_content"
                android:elevation="0dp"
                android:backgroundTint="@color/brown1" />

        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:srcCompat="@color/divider_gray"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dp">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/user_cur_pwd"
                android:layout_height="20dp"
                android:layout_width="100dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/txt_pri_cur_pwd"
                android:backgroundTint="@android:color/transparent" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:srcCompat="@color/divider_gray"
                android:layout_marginBottom="10dp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dp">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/user_pwd"
                android:layout_height="20dp"
                android:layout_width="100dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/txt_pri_pwd"
                android:backgroundTint="@android:color/transparent" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:srcCompat="@color/divider_gray"
                android:layout_marginBottom="10dp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dp">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/user_pwd2"
                android:layout_height="20dp"
                android:layout_width="150dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/txt_pri_pwd2"
                android:backgroundTint="@android:color/transparent" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:srcCompat="@color/divider_gray"
                android:layout_marginBottom="10dp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dp">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/user_name"
                android:layout_height="20dp"
                android:layout_width="100dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/txt_pri_name"
                android:inputType="textPersonName"
                android:backgroundTint="@android:color/transparent" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:srcCompat="@color/divider_gray"
                android:layout_marginBottom="10dp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dp">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/user_phone"
                android:layout_height="20dp"
                android:layout_width="100dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/txt_pri_phone"
                android:inputType="phone"
                android:backgroundTint="@android:color/transparent" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:srcCompat="@color/divider_gray"
                android:layout_marginBottom="10dp" />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/str_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel"
            android:layout_weight="1"
            android:backgroundTint="@color/brown1" />

        <Button
            android:text="@string/user_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignUp"
            android:layout_weight="1"
            android:backgroundTint="@color/brown1" />

    </LinearLayout>

</LinearLayout>